# lapassion-service

./: .gitignore  docker-compose.yaml  pyproject.toml
nginx/: Dockerfile
service/: Dockerfile  config.py  requirements.txt  wsgi.py
service/controllers/: __init__.py  location_controller.py  user_controller.py
service/dtos/: __init__.py  locations_dto.py  users_dto.py
service/repositories/: __init__.py  location_repository.py  users_repository.py
service/services/: __init__.py  location_service.py  users_service.py
