[project]
name = "lapassion-service"
version = "0.1.0"
description = "Service of the LaPassion project"
authors = [
    {name = "William Silva",email = "zonejr4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
